# prometheus_sql_adapter

./: .dockerignore  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  go.mod  go.sum
.github/workflows/: build-on-linux.yml  build-on-mac.yml  build-on-windows.yml  build-single-binary-on-linux.yml
.theia/: launch.json
cmd/prometheus_sql_adapter/: main.go
data/: .gitignore
debug-image/: Dockerfile
helper/: build.sh  insert-dummy-data.sh  prepare-mysql.sh  reset-mysql.sh  run-debug.sh  run-dummy-server.sh  run-mysql.sh
internal/repo/: init.go  mysql.go  read.go  sqlite.go  write.go
internal/web/: init.go  read.go  render.go  write.go
src/: context.rs  handlers.rs  main.rs  proto.rs  repo.rs
src/proto/: README.md  remote.rs  types.rs
src/repo/: mysql.rs  sqlite.rs
