[package]
name = 'prometheus_sql_adapter'
version = '0.1.0'
authors = ['Kaede Fujisaki <psi@7io.org>']
edition = '2018'
readme = 'README.md'
build = 'build.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2.3"
clap = "2.33.1"
cascara = "0.1.0"
string-error = "0.1.0"
snap = "1"
protobuf = { version = "2", features = ["with-bytes"] }

[build-dependencies]
protobuf-codegen-pure = "2.3"
