[package]
name = 'prometheus_sql_adapter'
version = '0.1.0'
authors = ['Kaede Fujisaki <psi@7io.org>']
edition = '2018'
readme = 'README.md'
build = 'build.rs'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
clap = "2.33"
cascara = "0.1"
string-error = "0.1"
snap = "1.0"
protobuf = { version = "2", features = ["with-bytes"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "mysql", "sqlite", "chrono", "postgres"] }
rand = "0.7"

[build-dependencies]
protobuf-codegen-pure = "2.17"
